<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout_ctrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_on"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_turn_on"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/button_off"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_turn_off"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/button_paired"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_paired_devices"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_search"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/button_visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_discoverable"
            android:textAllCaps="false" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout_ctrl"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:background="@android:color/black"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/shape_scrollbar" />

</RelativeLayout>